--- a/Index.html
+++ b/Index.html
@@ -4,14 +4,6 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Black Point Directive</title>
-  <meta name="description" content="Official site of Black Point Directive, a Star Citizen organization specializing in Security, Logistics, and Intelligence." />
-  <meta name="author" content="Black Point Directive" />
-  <meta property="og:title" content="Black Point Directive" />
-  <meta property="og:description" content="Explore the Security, Logistics, and Intelligence divisions of Black Point Directive in the Star Citizen universe." />
-  <meta property="og:url" content="https://blackpointdirective.org" />
-  <meta property="og:type" content="website" />
-  <meta property="og:image" content="https://source.unsplash.com/1600x600/?space,starcitizen" />
-  <link rel="canonical" href="https://blackpointdirective.org" />
   <link rel="stylesheet" href="styles.css" />
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -83,7 +75,7 @@
   </section>
 
   <footer>
-    <p>&copy; 2025 Black Point Directive. All rights reserved. Visit us at <a href="https://blackpointdirective.org">blackpointdirective.org</a></p>
+    <p>&copy; 2025 Black Point Directive. All rights reserved.</p>
   </footer>
 </body>
 </html>
