--- a/index.html
+++ b/index.html
@@ -3,10 +3,79 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>BlackPointDirective</title>
+  <title>BlackPointDirective - Home</title>
+  <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
-  <div id="root"></div>
-  <script type="module" src="/src/main.jsx"></script>
+  <nav>
+    <a href="index.html">Home</a>
+    <a href="why.html">Why Us</a>
+    <a href="contact.html">Contact Us</a>
+    <a href="socials.html">Socials</a>
+  </nav>
+
+  <h1>BlackPointDirective</h1>
+
+  <div class="slideshow-container">
+    <div class="mySlides fade">
+      <img src="https://robertsspaceindustries.com/media/90ykc4snrr3j8bp" alt="Industrial Ship - MISC Prospector" />
+      <div class="caption">Industrial Ship: MISC Prospector</div>
+    </div>
+
+    <div class="mySlides fade">
+      <img src="https://robertsspaceindustries.com/media/7tzsqhh6jlehvjz" alt="Combat Ship - Aegis Sabre" />
+      <div class="caption">Combat Ship: Aegis Sabre</div>
+    </div>
+
+    <div class="mySlides fade">
+      <img src="https://robertsspaceindustries.com/media/fupfvz3ymkpjf07" alt="Industrial Ship - Drake Caterpillar" />
+      <div class="caption">Industrial Ship: Drake Caterpillar</div>
+    </div>
+
+    <div class="mySlides fade">
+      <img src="https://robertsspaceindustries.com/media/3vxcluq04yqsyj1" alt="Combat Ship - Anvil Gladiator" />
+      <div class="caption">Combat Ship: Anvil Gladiator</div>
+    </div>
+
+    <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+    <a class="next" onclick="plusSlides(1)">&#10095;</a>
+  </div>
+
+  <button onclick="window.location.href='https://discord.com/invite/TBD'">Join Us</button>
+
+  <script>
+    let slideIndex = 0;
+    showSlides();
+
+    function showSlides() {
+      let i;
+      let slides = document.getElementsByClassName("mySlides");
+      for (i = 0; i < slides.length; i++) {
+        slides[i].style.display = "none";  
+      }
+      slideIndex++;
+      if (slideIndex > slides.length) {slideIndex = 1}    
+      slides[slideIndex-1].style.display = "block";  
+      setTimeout(showSlides, 4000); // Change image every 4 seconds
+    }
+
+    function plusSlides(n) {
+      slideIndex += n - 1;
+      if(slideIndex < 0) slideIndex = 0;
+      showSlidesManual(slideIndex+1);
+    }
+
+    function showSlidesManual(n) {
+      let i;
+      let slides = document.getElementsByClassName("mySlides");
+      if (n > slides.length) {slideIndex = 1}
+      else if (n < 1) {slideIndex = slides.length}
+      else {slideIndex = n;}
+      for (i = 0; i < slides.length; i++) {
+        slides[i].style.display = "none";  
+      }
+      slides[slideIndex-1].style.display = "block";  
+    }
+  </script>
 </body>
 </html>
