Added Image and space

--- a/index.html
+++ b/index.html
@@ -24,8 +24,11 @@
     </div>
   </section>
 
-  <section class="starfield">
-    <div class="stars"></div>
+  <section class="galaxy">
+    <div class="galaxy-content">
+      <h2>Explore the Stars</h2>
+      <p>From tactical operations to industrial might, BlackPointDirective leads the frontier in the 'verse.</p>
+    </div>
   </section>
 
 </body>
