--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     <div class="hero-overlay"></div>
     <div class="hero-content">
       <h1>BlackPointDirective</h1>
-      <p>Join our elite Star Citizen organization specializing in Logistics, Security, and Intelligence. Together we dominate the stars!</p>
+      <p>Founded by Matthew Blackpoint in 2887, Blackpoint Directive (B.P.D.) secures trade routes, protects assets, and projects force across the universe. Dedicated to fundamental growth of stakeholders & civil well-being, we operate under a Board of Directors, delivering precision, autonomy, and profit through three divisions: Logistics, Intelligence, and Military. We accommodate a wide array of operations and require individuals with diverse skillsets. If you're an active player of the game and you're looking to help build the foundation of a blossoming community, B.P.D. may be the best fit for you.</p>
       <button onclick="window.location.href='https://discord.com/invite/TBD'">Join Us</button>
     </div>
   </section>
